[api] Add timezones list endpoint and SDK
