# libs/contracts/openapi.yaml
@@ -235,6 +235,26 @@ paths:
                 $ref: '#/components/schemas/HTTPValidationError'
         '404':
           description: Reminder not found or telegramId mismatch
+  /timezones:
+    get:
+      summary: Get Timezones
+      operationId: get_timezones_timezones_get
+      responses:
+        '200':
+          description: Successful Response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+                title: Response Get Timezones Timezones Get
+        '422':
+          description: Validation Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HTTPValidationError'
   /timezone:
     get:
       summary: Get Timezone
